<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_margin="3dp"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="30dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="100dp"
            android:background="@color/gray"
            android:contentDescription="@string/image"
            android:padding="5dp"
            android:src="@drawable/ic_shopping_bag_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/orderIDNotEditable"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/order"
            app:layout_constraintBottom_toBottomOf="@id/image"
            app:layout_constraintStart_toEndOf="@+id/image"
            app:layout_constraintTop_toTopOf="@id/image" />

        <TextView
            android:id="@+id/orderIdEditable"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_111111111111111111111"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/image"
            app:layout_constraintStart_toEndOf="@id/orderIDNotEditable"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/priceImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/money"
            android:src="@drawable/ic_baseline_attach_money_24"
            app:layout_constraintEnd_toEndOf="@id/image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image" />


        <TextView
            android:id="@+id/priceNotEditable"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/total_price"
            app:layout_constraintBottom_toBottomOf="@id/priceImage"
            app:layout_constraintStart_toEndOf="@+id/priceImage"
            app:layout_constraintTop_toTopOf="@id/priceImage" />


        <TextView
            android:id="@+id/totalPriceEditable"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:gravity="center"
            android:text="@string/_170"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/priceNotEditable"
            app:layout_constraintStart_toEndOf="@id/priceNotEditable"
            app:layout_constraintTop_toTopOf="@id/orderIdEditable"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/currency_code"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:text="@string/egp"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/totalPriceEditable"
            app:layout_constraintStart_toEndOf="@id/totalPriceEditable" />


        <ImageView
            android:id="@+id/image_created_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/gray"
            android:contentDescription="@string/created_at"
            android:src="@drawable/ic_baseline_date_range_24"
            app:layout_constraintEnd_toEndOf="@id/image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/priceImage" />


        <TextView
            android:id="@+id/created_at"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/created_at"
            app:layout_constraintBottom_toBottomOf="@id/image_created_at"
            app:layout_constraintStart_toEndOf="@+id/image_created_at"
            app:layout_constraintTop_toTopOf="@id/image_created_at" />

        <TextView
            android:id="@+id/createdAtEditable"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:gravity="center"
            android:paddingHorizontal="5dp"
            android:text="@string/_2021_05_31t23_47_47_02_00"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/created_at"
            app:layout_constraintStart_toEndOf="@id/created_at"
            app:layout_constraintTop_toTopOf="@id/totalPriceEditable"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toStartOf="@id/payButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/createdAtEditable" />

        <Button
            android:id="@+id/payButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/green"
            android:text="@string/pay_now"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cancelButton"
            app:layout_constraintTop_toBottomOf="@id/createdAtEditable" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>