<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    android:elevation="10dp"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="30dp"
    android:padding="10dp"
    android:layout_margin="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="@dimen/stripe_3ds2_brand_zone_horizontal_margin"
        android:layout_height="match_parent">

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="3dp"-->
<!--            android:padding="10dp"-->
<!--            style="@style/text_style"-->
<!--            android:text="@string/order_product_1_item"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            android:id="@+id/orderItems"/>-->

<!--        <LinearLayout-->
<!--            android:layout_width="15dp"-->
<!--            android:layout_height="15dp"-->
<!--            android:id="@+id/circler"-->
<!--            android:background="@drawable/state_circle_shape"-->
<!--            app:layout_constraintTop_toBottomOf="@id/orderItems"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            android:orientation="horizontal" />-->


<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="3dp"-->
<!--            android:padding="10dp"-->
<!--            style="@style/text_style"-->
<!--            android:text="@string/waiting_for_payment"-->
<!--            android:textSize="15sp"-->
<!--            app:layout_constraintBottom_toBottomOf="@id/circler"-->
<!--            app:layout_constraintTop_toTopOf="@id/circler"-->
<!--            app:layout_constraintStart_toEndOf="@id/circler"-->
<!--            android:textColor="@color/gray"-->
<!--            android:id="@+id/watingForPayment"/>-->



        <ImageView
            android:padding="5dp"
            android:src="@drawable/abc_vector_test"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/gray"
            android:id="@+id/itemImageOrder"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:padding="5dp"
            style="@style/text_style"
            android:text="@string/title"
            android:textSize="15sp"
            app:layout_constraintTop_toTopOf="@id/itemImageOrder"
            app:layout_constraintStart_toEndOf="@id/itemImageOrder"
            android:textColor="@color/gray"
            android:id="@+id/title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:paddingVertical="5dp"
            android:paddingStart="5dp"
            style="@style/text_style"
            android:text="@string/quantity_x"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toEndOf="@id/itemImageOrder"
            android:textColor="@color/gray"
            android:id="@+id/quantity"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            style="@style/text_style"
            android:text="@string/_1"
            android:textSize="15sp"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="@id/quantity"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toEndOf="@id/quantity"
            android:id="@+id/quantityEditable"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:padding="5dp"
            style="@style/text_style"
            android:text="@string/_5_black"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/quantity"
            app:layout_constraintStart_toEndOf="@id/itemImageOrder"
            android:id="@+id/variant_Title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:padding="5dp"
            style="@style/text_style"
            android:text="@string/price"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/variant_Title"
            app:layout_constraintStart_toEndOf="@id/itemImageOrder"
            android:id="@+id/price"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:padding="5dp"
            style="@style/text_style"
            android:text="@string/_1"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/variant_Title"
            app:layout_constraintStart_toEndOf="@id/price"
            android:id="@+id/priceEdible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
